--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "rss": "https://craftcms.com/changelog.rss"
   },
   "require": {
-    "ext-gd": "^7.3",
+    "ext-gd": "7.3.27",
     "craftcms/cms": "3.6.10",
     "vlucas/phpdotenv": "2.4.0",
     "verbb/super-table": "2.6.7",
@@ -28,11 +28,11 @@
     "nystudio107/craft-minify": "1.2.10",
     "verbb/default-dashboard": "1.0.8",
     "craftcms/redactor": "2.8.5",
-    "doublesecretagency/craft-cpcss": "^2.2.1",
+    "doublesecretagency/craft-cpcss": "2.2.1",
     "solspace/craft-freeform": "3.10.8",
     "putyourlightson/craft-blitz": "3.7.0",
     "spacecatninja/imager-x": "v3.3.0",
-    "vaersaagod/dospaces": "^1.1",
+    "vaersaagod/dospaces": "1.1",
     "sebastianlenz/linkfield": "1.0.25"
   },
   "autoload": {
