Package updates and remove freeform template.

--- a/config/project-stack/project.yaml
+++ b/config/project-stack/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1614274906
+dateModified: 1617307764
 email:
   fromEmail: $SITE_EMAIL
   fromName: $SITE_NAME
@@ -23,6 +23,10 @@ plugins:
     enabled: true
     licenseKey: QTOQ5VPO0CW4I2OBJ7TDM7R8
     schemaVersion: 3.6.6
+  cp-css:
+    edition: standard
+    enabled: true
+    schemaVersion: 1.0.0
   default-dashboard:
     edition: standard
     enabled: true
@@ -33,74 +37,14 @@ plugins:
       logInfo: false
       override: '1'
       userDashboard: '1'
-  freeform:
-    edition: lite
+  dospaces:
+    edition: standard
     enabled: true
-    licenseKey: Y0XXZ8LG3PYJJVF1PY0HZRWT
-    schemaVersion: 3.3.0
-    settings:
-      ajaxByDefault: false
-      alertNotificationRecipients: null
-      autoScrollToErrors: true
-      badgeType: all
-      blockedEmails: null
-      blockedEmailsError: 'Invalid Email Address'
-      blockedIpAddresses: null
-      blockedKeywords: null
-      blockedKeywordsError: 'Invalid Entry Data'
-      customErrorMessage: null
-      customHoneypotName: null
-      defaultTemplates: true
-      defaultView: dashboard
-      digestRecipients: null
-      displayFeed: true
-      emailTemplateDirectory: null
-      emailTemplateStorage: db
-      fieldDisplayOrder: name
-      fillWithGet: false
-      footerScripts: false
-      formSubmitDisable: false
-      formSubmitExpiration: null
-      formTemplateDirectory: _plugins/freeform
-      formattingTemplate: flexbox.html
-      freeformHoneypot: true
-      freeformHoneypotEnhancement: false
-      hideBannerDemo: true
-      hideBannerOldFreeform: false
-      minimumSubmitTime: null
-      pluginName: Forms
-      purgableSpamAgeInDays: null
-      purgableSubmissionAgeInDays: null
-      purgableUnfinalizedAssetAgeInMinutes: 180
-      recaptchaBehaviour: display_error
-      recaptchaEnabled: false
-      recaptchaErrorMessage: 'Please verify that you are not a robot.'
-      recaptchaKey: null
-      recaptchaMinScore: 0.5
-      recaptchaSecret: null
-      recaptchaSize: normal
-      recaptchaTheme: light
-      recaptchaType: v2_checkbox
-      removeNewlines: false
-      renderFormHtmlInCpViews: true
-      salesforce_client_id: null
-      salesforce_client_secret: null
-      salesforce_password: null
-      salesforce_username: null
-      scriptInsertLocation: footer
-      sessionEntryMaxCount: 50
-      sessionEntryTTL: 10800
-      showErrorsForBlockedEmails: false
-      showErrorsForBlockedKeywords: false
-      showTutorial: false
-      spamFolderEnabled: true
-      spamProtectionBehaviour: simulate_success
-      submissionThrottlingCount: null
-      submissionThrottlingTimeFrame: null
+    schemaVersion: 3.0.9
   imager-x:
     edition: lite
     enabled: true
-    licenseKey: 6BVMD74TZC33I1BUXVIKN6D3
+    licenseKey: 9W2EKIPTIFZIF00XH9WUO3FO
     schemaVersion: 3.0.0
   minify:
     edition: standard
@@ -110,15 +54,10 @@ plugins:
     edition: standard
     enabled: true
     schemaVersion: 2.3.0
-  retour:
-    edition: standard
-    enabled: true
-    licenseKey: 081C3N7O2G6RQGTIYTZGT9YV
-    schemaVersion: 3.0.9
   seomatic:
     edition: standard
     enabled: true
-    licenseKey: PJQHH4X9DG4FAEH96LMMZBUY
+    licenseKey: NAFCV2KCESW40RLH3PCDT9C9
     schemaVersion: 3.0.9
     settings:
       addHrefLang: true
@@ -163,7 +102,7 @@ system:
   edition: pro
   live: true
   name: $SITE_NAME
-  schemaVersion: 3.6.4
+  schemaVersion: 3.6.6
   timeZone: Europe/London
 users:
   allowPublicRegistration: false
