--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
         "babel-preset-env": "^1.7.0",
         "browser-sync": "^2.26.14",
         "critical": "^2.0.6",
-        "css-loader": "^5.0.2",
+        "css-loader": "3.6",
         "cssnano": "^4.1.10",
         "eslint": "^7.20.0",
         "eslint-config-airbnb": "^18.2.1",
