--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
   "config": {
     "optimize-autoloader": true,
     "platform": {
-      "php": ">=7.3"
+      "php": "7.3"
     }
   },
   "scripts": {
