Add additional env parameters.

--- a/.env.example
+++ b/.env.example
@@ -23,5 +23,20 @@ SMTP_PORT="587"
 SMTP_USERNAME=""
 SMTP_PASSWORD=""
 
+MAILGUN_DOMAIN=
+MAILGUN_API_KEY=
+MAILGUN_ENDPOINT=
+
 ASSETS_URL="${SITE_URL}${UPLOADS_FOLDER}"
 ASSETS_PATH="${SITE_PATH}${PUBLIC_FOLDER}/${UPLOADS_FOLDER}"
+
+SPACES_BASE_URL=
+SPACES_TRANSFORMS_URL=
+SPACES_API_KEY=
+SPACES_SECRET=
+SPACES_REGION=
+SPACES_ENDPOINT=
+SPACES_BUCKET=
+
+STRIPE_API_KEY=
+STRIPE_PUBLISHABLE_KEY=
