Allow VueJs to work alongside AlpineJs + Js fixes.

--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -16,6 +16,11 @@ http {
     }
 
     server {
+
+        if ($host ~ ^(?!www\.)(?<domain>.+)$) {
+            return  301 $scheme://www.$domain$request_uri;
+        }
+
         # define an easy to reference name that can be used in try_files
         location @heroku-fcgi {
             include fastcgi_params;
