--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
         "babel-preset-env": "^1.7.0",
         "babel-preset-vue-app": "^2.0.0",
         "browser-sync": "^2.26.14",
-        "core-js": "^3.10.2",
+        "core-js": "^3.11.0",
         "critical": "^2.0.6",
         "cross-env": "^5.2.0",
-        "css-loader": "3.6",
+        "css-loader": "^3.6",
         "cssnano": "^4.1.11",
         "eslint": "^7.24.0",
         "eslint-config-airbnb": "^18.2.1",
@@ -86,7 +86,7 @@
         "mini-css-extract-plugin": "^1.5.0",
         "node-sass": "^4.11.0",
         "normalize-scss": "^7.0.1",
-        "postcss": "^8.2.10",
+        "postcss": "^8.2.12",
         "purgecss": "^2.3.0",
         "resolve-url-loader": "^3.0.0",
         "rev-del": "^2.0.0",
@@ -100,7 +100,6 @@
         "vfc": "^2.0.0",
         "vue": "^2.5.22",
         "vue-awesome": "^3.3.1",
-        "vue-confetti": "^2.0.8",
         "vue-content-loader": "^0.2.1",
         "vue-currency-filter": "^3.4.2",
         "vue-currency-symbol": "^1.0.2",
@@ -109,8 +108,6 @@
         "vue-loading-spinner": "^1.0.11",
         "vue-money-format": "^1.1.1",
         "vue-slick": "^1.1.15",
-        "vue-stripe-elements-plus": "^0.2.9",
-        "vue-stripe-payment": "^0.2.0",
         "vue-template-compiler": "^2.5.22",
         "vuex": "^3.1.0"
     },
