--- a/package.json
+++ b/package.json
@@ -50,55 +50,56 @@
         "js-cookie": "^2.2.1",
         "tailwindcss-aspect-ratio": "^2.0.0",
         "tailwindcss-typography": "^3.1.0",
-        "vanilla-lazyload": "^17.3.1"
+        "vanilla-lazyload": "^17.4.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.13.16",
-        "@babel/preset-env": "^7.13.15",
-        "@vue/compiler-sfc": "^3.0.11",
-        "autoprefixer": "^9.2.4",
+        "@babel/core": "^7.14.8",
+        "@babel/preset-env": "^7.14.8",
+        "@vue/compiler-sfc": "^3.1.5",
+        "@fullhuman/postcss-purgecss": "^3.0.0",
+        "autoprefixer": "^9.8.6",
         "axios": "^0.18.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.2.2",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.7.0",
         "babel-preset-vue-app": "^2.0.0",
-        "browser-sync": "^2.26.14",
-        "core-js": "^3.11.0",
+        "browser-sync": "^2.27.4",
+        "core-js": "^3.15.2",
         "critical": "^2.0.6",
         "cross-env": "^5.2.0",
         "css-loader": "^3.6",
         "cssnano": "^4.1.11",
-        "eslint": "^7.24.0",
+        "eslint": "^7.31.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-html": "^6.1.1",
-        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-react": "^7.23.2",
+        "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "favicons": "^6.2.1",
+        "favicons": "^6.2.2",
         "file-loader": "^6.2.0",
         "flexbox-grid-mixins": "^0.1.4",
         "flexboxgrid-sass": "^8.0.5",
         "jquery": "^3.3.1",
         "laravel-mix": "^4.0.14",
-        "mini-css-extract-plugin": "^1.5.0",
+        "mini-css-extract-plugin": "^1.6.2",
         "node-sass": "^4.11.0",
         "normalize-scss": "^7.0.1",
-        "postcss": "^8.2.12",
+        "postcss": "^7.0.35",
         "purgecss": "^2.3.0",
-        "resolve-url-loader": "^3.0.0",
+        "resolve-url-loader": "^3.1.4",
         "rev-del": "^2.0.0",
-        "sass": "^1.32.11",
+        "sass": "^1.35.2",
         "sass-loader": "^7.1.0",
         "slick-carousel": "^1.8.1",
         "style-loader": "^0.23.1",
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
         "vfc": "^2.0.0",
-        "vue": "^2.5.22",
+        "vue": "^2.6.14",
         "vue-awesome": "^3.3.1",
         "vue-content-loader": "^0.2.1",
         "vue-currency-filter": "^3.4.2",
@@ -108,7 +109,7 @@
         "vue-loading-spinner": "^1.0.11",
         "vue-money-format": "^1.1.1",
         "vue-slick": "^1.1.15",
-        "vue-template-compiler": "^2.5.22",
+        "vue-template-compiler": "^2.6.14",
         "vuex": "^3.1.0"
     },
     "scripts": {
