--- a/composer.json
+++ b/composer.json
@@ -19,20 +19,19 @@
     "rss": "https://craftcms.com/changelog.rss"
   },
   "require": {
-    "ext-gd": "7.3.27",
-    "craftcms/cms": "3.6.11",
-    "vlucas/phpdotenv": "2.4.0",
-    "verbb/super-table": "2.6.7",
-    "nystudio107/craft-seomatic": "3.3.37",
+    "craftcms/cms": "3.7.10",
+    "vlucas/phpdotenv": "5.3.0",
+    "verbb/super-table": "2.6.8",
+    "nystudio107/craft-seomatic": "3.4.2",
     "clubstudioltd/craft-asset-rev": "6.0.2",
     "nystudio107/craft-minify": "1.2.10",
     "verbb/default-dashboard": "1.0.8",
-    "craftcms/redactor": "2.8.5",
-    "doublesecretagency/craft-cpcss": "2.3.0",
-    "putyourlightson/craft-blitz": "3.8.0",
-    "spacecatninja/imager-x": "v3.4.0",
-    "vaersaagod/dospaces": "1.1",
-    "sebastianlenz/linkfield": "1.0.25"
+    "craftcms/redactor": "2.8.8",
+    "doublesecretagency/craft-cpcss": "2.3.1",
+    "putyourlightson/craft-blitz": "3.10.2",
+    "spacecatninja/imager-x": "v3.5.2",
+    "vaersaagod/dospaces": "1.1.3",
+    "sebastianlenz/linkfield": "2.0.0-rc.1"
   },
   "autoload": {
     "psr-4": {
