Refactoring stack to include Craft Commerce config.

--- a/config/project-stack-commerce/project.yaml
+++ b/config/project-stack-commerce/project.yaml
@@ -30,6 +30,7 @@ meta:
     55b03168-c93a-4efa-a16e-de6a0c21ff6a: 'Shop Categories' # Shop Categories
     73a30c01-45ca-404e-94d5-95e97b0914da: Shop # Shop
     86a294a2-4790-4672-8c25-c80fb55fe4ef: 'Shop Variants' # Shop Variants
+    89cfb321-73e7-40a6-aac0-a005390d9998: 'Enable VueJS' # Enable VueJS
     452b7e0c-8a95-46ad-94ba-88c7e4900e05: 'Shop Categories' # Shop Categories
     90552b17-3ba7-452a-9dfd-0b13004b4659: 'Page - Block Content' # Page - Block Content
     18725511-9c0c-4947-86bf-e5cb98a46890: 'Shop Path' # Shop Path
