--- a/composer.json
+++ b/composer.json
@@ -19,19 +19,19 @@
     "rss": "https://craftcms.com/changelog.rss"
   },
   "require": {
-    "craftcms/cms": "3.7.10",
+    "craftcms/cms": "3.7.23",
     "vlucas/phpdotenv": "2.4.0",
-    "verbb/super-table": "2.6.8",
-    "nystudio107/craft-seomatic": "3.4.2",
+    "verbb/super-table": "2.7.0",
+    "nystudio107/craft-seomatic": "3.4.20",
     "clubstudioltd/craft-asset-rev": "6.0.2",
     "nystudio107/craft-minify": "1.2.10",
     "verbb/default-dashboard": "1.0.8",
     "craftcms/redactor": "2.8.8",
-    "doublesecretagency/craft-cpcss": "2.3.1",
-    "putyourlightson/craft-blitz": "3.10.2",
-    "spacecatninja/imager-x": "v3.5.2",
+    "doublesecretagency/craft-cpcss": "2.4.0",
+    "putyourlightson/craft-blitz": "3.11.0",
+    "spacecatninja/imager-x": "v3.5.4",
     "vaersaagod/dospaces": "1.1.3",
-    "sebastianlenz/linkfield": "2.0.0-rc.1",
+    "sebastianlenz/linkfield": "1.0.25",
     "bymayo/commerce-widgets": "^2.0",
     "craftcms/commerce": "3.4.8",
     "craftcms/commerce-stripe": "2.3.2.1",
