--- a/config/project-stack/project.yaml
+++ b/config/project-stack/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1617307764
+dateModified: 1643387999
 email:
   fromEmail: $SITE_EMAIL
   fromName: $SITE_NAME
@@ -13,6 +13,26 @@ email:
     useAuthentication: '1'
     username: $SMTP_USERNAME
   transportType: craft\mail\transportadapters\Smtp
+meta:
+  __names__:
+    0cf15aa5-fa7d-405e-9a99-aa30b099a53c: Files # Files
+    0f92aa22-16d7-46d4-876a-135fba91d971: 'Page - Block' # Page - Block
+    1b7a3230-f24a-4ac2-a997-3289e43ddf25: 'Cookie Consent' # Cookie Consent
+    2f26868b-418e-44a0-8e53-d367d9a163eb: 'Meta & Social Data' # Meta & Social Data
+    4edb6c61-ee7b-4a62-ae07-d27f2127a80a: Block # Block
+    06fb793a-57ef-483e-8415-675d2cfa2fd8: 'Craft 3' # Craft 3
+    89cfb321-73e7-40a6-aac0-a005390d9998: 'Enable VueJS' # Enable VueJS
+    90552b17-3ba7-452a-9dfd-0b13004b4659: 'Page - Block Content' # Page - Block Content
+    a4cade2e-b351-4d0b-8087-3328bc132811: Page # Page
+    a37b06c6-894d-4dad-a768-46c1a840e80b: 'Craft 3' # Craft 3
+    a6548a8e-edd2-4cbb-9200-db7de2726f75: Common # Common
+    b08b5d93-e934-4018-a028-6930ba8ddcb0: New # New
+    b59ae72a-8b0b-4bb9-83b9-a351b70b54a7: Site # Site
+    d22d8c4e-5130-4bb2-afad-a7c08be98605: Images # Images
+    d6471ab8-0d49-45bf-af5d-f0d2a860e267: 'Meta & Social Data' # Meta & Social Data
+    f64c5171-437f-45f4-ac5b-1164673e94f9: Heading # Heading
+    f733677f-fb59-4704-839a-4c90aa4b2d05: 'Public Schema' # Public Schema
+    feb39789-b26f-45a4-99fb-d7e4cc376989: Padding # Padding
 plugins:
   assetrev:
     edition: standard
@@ -22,7 +42,7 @@ plugins:
     edition: standard
     enabled: true
     licenseKey: QTOQ5VPO0CW4I2OBJ7TDM7R8
-    schemaVersion: 3.6.6
+    schemaVersion: 3.10.0
   cp-css:
     edition: standard
     enabled: true
@@ -58,7 +78,7 @@ plugins:
     edition: standard
     enabled: true
     licenseKey: NAFCV2KCESW40RLH3PCDT9C9
-    schemaVersion: 3.0.9
+    schemaVersion: 3.0.11
     settings:
       addHrefLang: true
       addPaginatedHreflang: true
@@ -102,11 +122,11 @@ system:
   edition: pro
   live: true
   name: $SITE_NAME
-  schemaVersion: 3.6.6
+  schemaVersion: 3.7.8
   timeZone: Europe/London
 users:
   allowPublicRegistration: false
   defaultGroup: null
   photoSubpath: ''
-  photoVolumeUid: d22d8c4e-5130-4bb2-afad-a7c08be98605
+  photoVolumeUid: d22d8c4e-5130-4bb2-afad-a7c08be98605 # Images
   requireEmailVerification: true
