Template tweaks after initial install. Extending Gitignore. Including dependency lock files. Removing incorrectly included CSS dist

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,7 @@ yarn-error.log*
 public/dist/js/*
 public/dist/css/*
 mix-manifest.json
+
+# Template Dev Excluded files.
+config/project
+public/dist/images
