--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,10 +1,8 @@
 {
-    "/public/dist/js/app.js": "/public/dist/js/app.js",
-    "/public/dist/js/app.js.map": "/public/dist/js/app.js.map",
-    "/public/dist/js/main.js": "/public/dist/js/main.js",
-    "/public/dist/css/main.css": "/public/dist/css/main.css",
-    "/public/dist/js/main.js.map": "/public/dist/js/main.js.map",
-    "/public/dist/css/main.css.map": "/public/dist/css/main.css.map",
+    "/public/dist/js/index.js": "/public/dist/js/index.js",
+    "/public/dist/css/app.css": "/public/dist/css/app.css",
+    "/public/dist/js/index.js.map": "/public/dist/js/index.js.map",
+    "/public/dist/css/app.css.map": "/public/dist/css/app.css.map",
     "/public/dist/js/manifest.js": "/public/dist/js/manifest.js",
     "/public/dist/js/manifest.js.map": "/public/dist/js/manifest.js.map",
     "/public/dist/js/vendor.js": "/public/dist/js/vendor.js",
