--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
   },
   "autoload": {
     "psr-4": {
-      "modules\\": "modules/"
+      "mythdigital\\mythcommerce\\": "modules/mythcommerce/"
     }
   },
   "config": {
