--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "devDependencies": {
         "@babel/core": "^7.14.8",
         "@babel/preset-env": "^7.14.8",
-        "@vue/compiler-sfc": "^3.1.5",
         "@fullhuman/postcss-purgecss": "^3.0.0",
+        "@vue/compiler-sfc": "^3.1.5",
         "autoprefixer": "^9.8.6",
         "axios": "^0.18.0",
         "babel-core": "^6.26.3",
@@ -109,10 +109,10 @@
         "vue-loading-spinner": "^1.0.11",
         "vue-money-format": "^1.1.1",
         "vue-slick": "^1.1.15",
-        "vue-template-compiler": "^2.6.14",
-        "vuex": "^3.1.0",
         "vue-stripe-elements-plus": "^0.3.2",
-        "vue-stripe-payment": "^0.2.0"
+        "vue-stripe-payment": "^0.2.0",
+        "vue-template-compiler": "^2.6.14",
+        "vuex": "^3.1.0"
     },
     "scripts": {
         "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
